-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.411 2009-02-07 00:38:33 jluis Exp $
-----------------------------------------------------------------------------------------
2009-02-07	jluis
	* utilmeca.c:		Replaced momten2axe() function with GMT_momten2axe() which uses
				GMT_jacobi and fixes a bug due to the use of convert_matrix()

2009-02-06	remko
	* utilmeca.c:		Fixed dangerous ifs that caused "random" rotations of beach balls
				and too small or too large black beach ball segments.
	* psmeca.{c,txt}:	Some polishing.

2009-02-05	jluis
	* ps2raster.{c,txt}:	Update info for the usefulness of the new --BASEMAP_TYPE=inside 
				option

2009-02-05	pwessel
	* psscale.c:		Now checks if -D is given, and replaced wrong test for -E.
	* gmt_init.c:		Added BASEMAP_FRAME=inside to set several parameters so that
				basemap ticks and annotations are inside the map boundary.

2009-02-05	remko
	* gmt_plot.c (GMT_export2proj4):	Initialize szProj4[0]=0, to avoid ugly
				surprises when no setting was found.
	* gmt_support.c (GMT_read_cpt):	Avoid interpolating hue (converted from RGB) over
				more than 180 degrees.
	* gmt_support.c (GMT_rgb_to_hsv):	Changed to integer logic to avoid errors on
				some compilers. As a result: much shorter code as well.
	* pslib.c (ps_rgb_to_hsv):	---"---
	* pslib.c (ps_color_image):	Image placement now in integers. This nsures that
				placement is consistent with e.g. box drawn with the same
				coordinates.
	* pslib.c (ps_makecolormap):	No longer produce colormap when the number of pixels
				and colors is the same.
	* ex04/*.cpt:		Added comments and COLOR_MODEL = RGB
	* GMT_drywet.cpt:	Added COLOR_MODEL = RGB

2009-02-02	remko
	* minmax.c:		Added -S option to leave space for error bars. Useful with
				-I option and subsequent psxy -E.

2009-01-21	remko
	* psbasemap.{c,txt}:	Erroneously suggested that base was plotted at z=0, instead of
				at the bottom end of the z-axis.
